# test-tasks-api

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: dependecies.py  main.py  router.py  shemas.py
app/api/tasks/: models.py  repository.py  router.py  service.py  shemas.py
app/api/users/: models.py  repository.py  router.py  service.py  shemas.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
app/lib/: base_mixin.py  base_repository.py  mixins.py
migrations/: env.py
