[tool.poetry]
name = "test-tasks"
version = "0.1.0"
description = ""
authors = ["lootawin sergey.lyutavin22@mail.ru"]
readme = "README.md"
packages = [{include = "test_tasks"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.16"
fastapi = "^0.97.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
email-validator = "^2.0.0.post2"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
